Tailwind + Prettier configuration

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "eslint": "^8.43.0"
+    "eslint": "^8.43.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
